[package]
name = "migrate_derive"
version = "0.1.0"
edition = "2021"
authors = ["disco07 <koneenok@outlook.fr>"]
description = "Database schema migration library for postgres, mysql"
keywords = ["database", "migration", "migrate", "postgres", "mysql"]
categories = ["database", "migration"]
repository = "https://github.com/disco07/migrate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.5", features = ["extra-traits"] }
quote = "1.0.26"
proc-macro2 = "1.0.53"